# football-passing-networks

./: .gitignore  README.md  main.py  pyproject.toml
results/metrics/: all_results.json  explainer_agreement.json  gat_half_history.json  gat_history.json  gcn_half_history.json  gcn_history.json  temporal_results.json
scripts/: build_dataset.py  compare_temporal.py  evaluate_models.py  explore_data.py  inspect_events.py  main.py  train_models.py  visualize_explainability.py  visualize_interpretability.py
src/data/: dataset.py  graph_builder.py  loader.py
src/evaluation/: attention.py  baseline.py  explainer.py  metrics.py  temporal.py
src/models/: __init__.py  base.py  gat.py  gcn.py
src/training/: collate.py  trainer.py
