[project]
name = "gnn-project"
version = "0.1.0"
description = "GNN-based football match outcome prediction using player passing networks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "statsbombpy>=1.0.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.0",
]
